fix connexion + import